phase-4-k8s-infra/manifests/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n

  template:
    metadata:
      labels:
        app: n8n

    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:1.118.2

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 5678
              protocol: TCP

          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
            - mountPath: /mnt/secrets-store
              name: secrets-store
              readOnly: true

      restartPolicy: Always

      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: n8n-secrets
